# graphql

./: pyproject.toml
learning/courses/: models.py  schema.py
learning/courses/migrations/: 0001_initial.py
learning/learning/: settings.py  urls.py
